kubernetes/apps/media/manifests/jellyfin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: jellyfin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8096
      targetPort: http
      protocol: TCP
  selector:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: jellyfin
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: jellyfin
spec:
  serviceName: jellyfin
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: media
      kalexlab.xyz/component: jellyfin
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: media
        kalexlab.xyz/component: jellyfin
        kalexlab.xyz/monitoring: "true"
        sso.kalexlab.xyz/idp: authentik
    spec:
      restartPolicy: Always
      containers:
        - name: app
          image: "docker.io/jellyfin/jellyfin:10.11.11"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          resources:
            requests:
              memory: 150Mi
              cpu: 20m
            limits:
              memory: 3Gi
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 30
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /data/media
              name: media-data-pvc
              subPath: media
            - mountPath: /config
              name: jellyfin-conf-pvc
            - mountPath: /cache
              name: jellyfin-cache
            - mountPath: /tmp
              name: tmp
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65535
        runAsGroup: 65535
        fsGroup: 65535
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
        - name: jellyfin-cache
          emptyDir:
            sizeLimit: 5Gi
        - name: tmp
          emptyDir:
            sizeLimit: 1Gi
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: jellyfin-conf-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 4Gi
