kubernetes/apps/media/manifests/qbittorrent.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: qbittorrent
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
    - name: bt-tcp
      port: 6881
      targetPort: bt-tcp
      protocol: TCP
    - name: bt-udp
      port: 6881
      targetPort: bt-udp
      protocol: UDP
  selector:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: qbittorrent
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: qbittorrent
spec:
  serviceName: qbittorrent
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: media
      kalexlab.xyz/component: qbittorrent
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: media
        kalexlab.xyz/component: qbittorrent
        kalexlab.xyz/monitoring: "true"
        egress.kalexlab.xyz/policy: vpn
    spec:
      restartPolicy: Always
      containers:
        - name: qbittorrent
          image: "ghcr.io/home-operations/qbittorrent:5.2.4"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: bt-tcp
              containerPort: 6881
              protocol: TCP
            - name: bt-udp
              containerPort: 6881
              protocol: UDP
          resources:
            requests:
              memory: 100Mi
              cpu: 5m
            limits:
              memory: 500Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 30
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /data/torrents
              name: media-data-pvc
              subPath: torrents
            - mountPath: /config
              name: qbittorrent-conf-pvc
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65535
        runAsGroup: 65535
        fsGroup: 65535
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: qbittorrent-conf-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Mi
