kubernetes/apps/media/manifests/sonarr.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: sonarr
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8989
      targetPort: http
      protocol: TCP
  selector:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: sonarr
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  labels:
    kalexlab.xyz/app: media
    kalexlab.xyz/component: sonarr
spec:
  serviceName: sonarr
  replicas: 1
  selector:
    matchLabels:
      kalexlab.xyz/app: media
      kalexlab.xyz/component: sonarr
  minReadySeconds: 5
  template:
    metadata:
      labels:
        kalexlab.xyz/app: media
        kalexlab.xyz/component: sonarr
        kalexlab.xyz/monitoring: "true"
    spec:
      restartPolicy: Always
      containers:
        - name: app
          image: "ghcr.io/home-operations/sonarr:4.0.20"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8989
              protocol: TCP
          resources:
            requests:
              memory: 100Mi
              cpu: 5m
            limits:
              memory: 250Mi
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 30
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /data
              name: media-data-pvc
            - mountPath: /config
              name: sonarr-conf-pvc
            - mountPath: /tmp
              name: sonarr-tmp
      enableServiceLinks: false
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65535
        runAsGroup: 65535
        fsGroup: 65535
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
        - name: sonarr-tmp
          emptyDir:
            sizeLimit: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: sonarr-conf-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 100Mi
