kubernetes/apps/media/manifests/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: media-ingress
  annotations:
    external-dns.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.kalexlab.xyz`)
      services:
        - name: jellyfin
          port: http
    # QBitTorrent configured to not require authentication when logging
    # from 0.0.0.0. Authentication enforced via forward auth
    - kind: Rule
      match: Host(`torrent.kalexlab.xyz`)
      services:
        - name: qbittorrent
          port: http
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
    # The following are set to allow without authentication local IPs
    # and are then protected using forward auth to have SSO
    # Currently not possible to disable authentication/use OIDC.
    #   ref: https://github.com/Sonarr/Sonarr/issues/2477
    - kind: Rule
      match: Host(`prowlarr.kalexlab.xyz`)
      services:
        - name: prowlarr
          port: http
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
    - kind: Rule
      match: Host(`radarr.kalexlab.xyz`)
      services:
        - name: radarr
          port: http
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
    - kind: Rule
      match: Host(`sonarr.kalexlab.xyz`)
      services:
        - name: sonarr
          port: http
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
  tls:
    secretName: media-ingress-certificate-secret
