kubernetes/apps/media/manifests/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-cluster-dns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: coredns
          podSelector:
            matchLabels:
              k8s-app: coredns
      ports:
        - protocol: UDP
          port: udp-53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyfin
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: media
      kalexlab.xyz/component: jellyfin
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: http
  egress:
    # Allow jellyfin to fetch metadata from external services
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: radarr
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: media
      kalexlab.xyz/component: radarr
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: qbittorrent
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: prowlarr
      ports:
        - protocol: TCP
          port: http
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: prowlarr
      ports:
        - protocol: TCP
          port: http
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: qbittorrent
      ports:
        - protocol: TCP
          port: http
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sonarr
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: media
      kalexlab.xyz/component: sonarr
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: qbittorrent
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: prowlarr
      ports:
        - protocol: TCP
          port: http
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: prowlarr
      ports:
        - protocol: TCP
          port: http
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: qbittorrent
      ports:
        - protocol: TCP
          port: http
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prowlarr
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: media
      kalexlab.xyz/component: prowlarr
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: radarr
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: sonarr
      ports:
        - protocol: TCP
          port: http
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: radarr
      ports:
        - protocol: TCP
          port: http
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: sonarr
      ports:
        - protocol: TCP
          port: http
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: flaresolverr
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: flaresolverr
              kalexlab.xyz/component: flaresolverr
      ports:
        - protocol: TCP
          port: http
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: media
      kalexlab.xyz/component: qbittorrent
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: radarr
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: sonarr
      ports:
        - protocol: TCP
          port: http
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: radarr
      ports:
        - protocol: TCP
          port: http
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: media
              kalexlab.xyz/component: sonarr
      ports:
        - protocol: TCP
          port: http
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
